<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dpend.foodfever.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/add_address"
            android:textColor="#000"
            android:padding="10dp"
            android:textSize="25sp" />
        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/addaddressname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:inputType="textPersonName"
            android:background="@drawable/input_background"
            android:layout_marginBottom="25dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/mobile_number"
                android:textColor="#000"
                android:textSize="20sp" />
         <EditText
             android:id="@+id/addaddressphone"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:textSize="25sp"
             android:inputType="phone"
             android:layout_marginBottom="25dp"
             android:background="@drawable/input_background"
             />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/pincode"
                android:textColor="#000"
                android:textSize="20sp" />
        <EditText
            android:id="@+id/addaddresspincode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_background"
            android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/address1"
                android:textColor="#000"
                android:textSize="20sp" />
        <EditText
            android:id="@+id/addaddressaddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:inputType="textPersonName"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_background"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/landmark"
                android:textColor="#000"
                android:textSize="20sp" />
        <EditText
            android:id="@+id/addaddresslandmark"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:inputType="textPersonName"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_background"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/housename"
                android:textColor="#000"
                android:textSize="20sp" />
        <EditText
            android:id="@+id/addaddresshousename"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:textSize="25sp"
            android:inputType="textPersonName"
            android:background="@drawable/input_background"

            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/town_street"
                android:textColor="#000"
                android:textSize="20sp" />
        <EditText
            android:id="@+id/addaddresstown"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:inputType="textPersonName"
            android:background="@drawable/input_background"
            />


        </LinearLayout>
        <Button
            android:id="@+id/addaddress"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:background="#fca103"
            android:fontFamily="@font/bubblegum_sans"
            android:textColor="@color/white"
            android:text="Add Address"/>
    </LinearLayout>
</ScrollView>